<resources>
    <string name="app_name">Club Suzuki</string>
    <string name="FACEBOOK_APP_ID">329781601194158</string>
    <string name="fb_login_protocol_scheme">fb329781601194158</string>
    <string name="ak_login_protocol_scheme">ak329781601194158</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">dc53c94d1e4f7309c65593264f57da23</string>
    <string name="GOOGLE_MAP_API_KEY">AIzaSyCt7H7oSpevm4dZgJc58BA_20DAxEWV6oA</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="get_started">Get Started</string>
    <string name="already_a_user">Already a User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">your name</string>
    <string name="your_name2">Your Name</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="set_password">Set Password  ( 5+ characters )</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_password2">Confirm Password  ( 5+ characters )</string>
    <string name="skip">Skip</string>
    <string name="almost_done">Almost Done !</string>
    <string name="dialog1">You may need to verify your mobile number again, when you\'ll login next time.   \n\nContinue without setting password?</string>
    <string name="show_password">show</string>
    <string name="sign_in">Sign In</string>
    <string name="your_email_or_phone">Your Email or Phone</string>
    <string name="your_password">Your Password</string>
    <string name="add_your_bike">Add Your Bike</string>
    <string name="chassis">chassis</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="add_bike">ADD BIKE</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="location">Location</string>
    <string name="e_commerce">E-commerce</string>
    <string name="profile">Profile</string>
    <string name="sos">SoS</string>
    <string name="survey">Survey</string>
    <string name="club_and_blog">Club and Blog</string>
    <string name="loyalty_program">LOYALTY QR CODE PROGRAM</string>
    <string name="redeem">Redeem</string>
    <string name="points_remaining">Points \nRemaining</string>
    <string name="_1500_points_to_go_to_become_probiker_lvl_3">1500 points needed to\n become Biker (Lvl 2)</string>
    <string name="upcoming_services">UPCOMING SERVICES</string>
    <string name="servicing_schedule">Servicing Schedule</string>
    <string name="dealer_points">Dealer Points</string>
    <string name="service_points">Service Points</string>
    <string name="bike_catalog">Bike Catalog</string>
    <string name="spare_parts_catalog">Spare Parts Catalog</string>
    <string name="oil_catalog">Oil Catalog</string>
    <string name="dialog_district_selection">You have denied location permission and you haven\'t set a default location in your profile. \n\n   So, please select a district :</string>
    <string name="bikes">Bikes</string>
    <string name="bike_parts">Parts</string>
    <string name="oil">Oils</string>
    <string name="sports">Sports</string>
    <string name="cruiser">Cruiser</string>
    <string name="scooter">Scooter</string>
    <string name="commuter">Commuter</string>
    <string name="engine_parts">Engine Parts</string>
    <string name="body_parts">Body Parts</string>
    <string name="accessories">Accessories</string>
    <string name="details">Details</string>
    <string name="shop_now">Shop Now</string>
    <string name="age">Age</string>
    <string name="phone_no">Phone No.</string>
    <string name="mail">Email</string>
    <string name="password2">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="chro">hh:mm:ss</string>
    <string name="ride_history">Ride History</string>

</resources>
