<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Alvi Khalil on 10/23/18 9:39 AM
  ~ Copyright (c) 2018 . All rights reserved.
  ~ Last modified 10/23/18 9:39 AM
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020303"
    tools:context=".ActivitiesBeforeLogin.SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".4"
        android:background="@drawable/splash_bike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textSize="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/white_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="80dp"
        android:background="@null"
        android:fontFamily="@font/avenir_light"
        android:hint="@string/your_email_or_phone"
        android:inputType="number"
        android:textColor="#ceffffff"
        android:textColorHint="#75ffffff"
        android:textSize="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <requestFocus />
    </EditText>



    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="#75ffffff"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="30dp"
        android:background="@null"

        android:fontFamily="@font/avenir_light"

        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textColor="#ceffffff"
        android:textColorHint="#75ffffff"
        android:textSize="15dp"
        app:layout_constraintRight_toLeftOf="@+id/eye"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name">

        <requestFocus />
    </EditText>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@+id/v"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="27dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/eyex2"
        android:tint="#75ffffff"
        android:padding="10dp"
        android:id="@+id/eye"/>




    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="#75ffffff"
        app:layout_constraintTop_toBottomOf="@id/edit_pass" />



    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/v2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/sign_in"
                android:textColor="#2a3b50"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_light"
        android:gravity="center"
        android:text="Forgot password?"
        android:textColor="#75ffffff"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        android:visibility="gone"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

</android.support.constraint.ConstraintLayout>