<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Alvi Khalil on 10/24/18 4:14 PM
  ~ Copyright (c) 2018 . All rights reserved.
  ~ Last modified 10/11/18 10:30 AM
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f9f9f9">


            <android.support.v7.widget.CardView
                android:id="@+id/sports"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/sports_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/avenir_medium"
                        android:text="@string/sports"
                        android:textColor="@color/colorAccent"
                        android:textSize="17dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/kk_pager"
                        app:layout_constraintBottom_toBottomOf="@+id/kk_pager"
                        app:layout_constraintRight_toRightOf="@+id/kk_pager"
                        app:layout_constraintLeft_toLeftOf="@+id/kk_pager"
                        android:id="@+id/sports_bike_progress"/>


                    <com.mazegeek.suzuki.clubsuzuki.HelperClasses.CustomeViewpager
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/kk_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/sports_title"


                        />


                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cruiser"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/sports">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/avenir_medium"
                        android:text="@string/cruiser"
                        android:textColor="@color/colorAccent"
                        android:textSize="17dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/cruiser_title"/>

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/kk_pager2"
                        app:layout_constraintBottom_toBottomOf="@+id/kk_pager2"
                        app:layout_constraintRight_toRightOf="@+id/kk_pager2"
                        app:layout_constraintLeft_toLeftOf="@+id/kk_pager2"
                        android:id="@+id/cruiser_bike_progress"/>


                    <com.mazegeek.suzuki.clubsuzuki.HelperClasses.CustomeViewpager
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/kk_pager2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/cruiser_title" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/scooter"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/cruiser">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/avenir_medium"
                        android:text="@string/commuter"
                        android:textColor="@color/colorAccent"
                        android:textSize="17dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/scooter_title"/>

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/kk_pager3"
                        app:layout_constraintBottom_toBottomOf="@+id/kk_pager3"
                        app:layout_constraintRight_toRightOf="@+id/kk_pager3"
                        app:layout_constraintLeft_toLeftOf="@+id/kk_pager3"
                        android:id="@+id/scooter_bike_progress"/>


                    <com.mazegeek.suzuki.clubsuzuki.HelperClasses.CustomeViewpager
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/kk_pager3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/scooter_title" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/commuter"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/scooter">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/avenir_medium"
                        android:text="@string/scooter"
                        android:textColor="@color/colorAccent"
                        android:textSize="17dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/commuter_title"/>

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/kk_pager4"
                        app:layout_constraintBottom_toBottomOf="@+id/kk_pager4"
                        app:layout_constraintRight_toRightOf="@+id/kk_pager4"
                        app:layout_constraintLeft_toLeftOf="@+id/kk_pager4"
                        android:id="@+id/commuter_bike_progress"/>


                    <com.mazegeek.suzuki.clubsuzuki.HelperClasses.CustomeViewpager
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/kk_pager4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/commuter_title" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/commuter">

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>